// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App empty 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 blpZzJ"
>
  <div
    class="StyledGrid-sc-1wofa1l-0 kToKIo"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gVMnUQ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hevOYs"
      >
        <button
          aria-label="show my themes"
          class="StyledButton-sc-323bzc-0 gPnbVE"
          type="button"
        >
          <svg
            aria-label="Menu"
            class="StyledIcon-sc-ofa7kd-0 eJclys"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 19h20M2 5h20M2 12h20"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 byKVaK"
        >
          <button
            aria-label="undo last change"
            class="StyledButton-sc-323bzc-0 gPnbVE"
            type="button"
          >
            <svg
              aria-label="Undo"
              class="StyledIcon-sc-ofa7kd-0 eJclys"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.18 4 8.6 5.44 6.06 8h9.71a6 6 0 0 1 0 12h-2v-2h2a4 4 0 0 0 0-8H6.06l2.54 2.51-1.42 1.41L2.23 9z"
              />
            </svg>
          </button>
          <button
            aria-label="redo last change"
            class="StyledButton-sc-323bzc-0 gPnbVE"
            type="button"
          >
            <svg
              aria-label="Redo"
              class="StyledIcon-sc-ofa7kd-0 eJclys"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.82 4 15.4 5.44 17.94 8H8.23a6 6 0 0 0 0 12h2v-2h-2a4 4 0 0 1 0-8h9.71l-2.54 2.51 1.41 1.41L21.77 9z"
              />
            </svg>
          </button>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
        />
        <button
          aria-label="change theme mode to dark"
          class="StyledButton-sc-323bzc-0 gPnbVE"
          type="button"
        >
          <svg
            aria-label="Sun"
            class="StyledIcon-sc-ofa7kd-0 eJclys"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4V2m0 20v-2m8-8h2M2 12h2m13.657-5.657L19.07 4.93M4.93 19.07l1.414-1.414m0-11.314L4.93 4.93m14.14 14.14-1.414-1.414M12 17a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"
              stroke="#000"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
        />
        <button
          aria-label="edit raw JSON"
          class="StyledButton-sc-323bzc-0 dOEgHg"
          type="button"
        >
          <svg
            aria-label="Code"
            class="StyledIcon-sc-ofa7kd-0 eJclys"
            viewBox="0 0 24 24"
          >
            <path
              d="m9 22 6-20m2 15 5-5-5-5M7 17l-5-5 5-5"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
        />
        <button
          aria-label="share"
          class="StyledButton-sc-323bzc-0 dOEgHg"
          type="button"
        >
          <svg
            aria-label="Share"
            class="StyledIcon-sc-ofa7kd-0 eJclys"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13v10H1V5h10m3-4h9v9m-13 4L23 1 10 14z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 Ukaxm"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqmDKi"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bxDDRl"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 ldeBwz"
            >
              <label
                class="StyledBox-sc-13pk1d4-0 fnXGJe"
                for="name"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 lhOBjf"
                >
                  name
                </span>
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 kqmDKi"
              >
                <div
                  class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
                >
                  <input
                    autocomplete="off"
                    class="StyledTextInput-sc-1x30a0s-0 dlonhl"
                    name="name"
                    style="text-align: right;"
                    value="my theme"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bxDDRl"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 ldeBwz"
            >
              <label
                class="StyledBox-sc-13pk1d4-0 fnXGJe"
                for="rounding"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 lhOBjf"
                >
                  rounding
                </span>
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 kqmDKi"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dbdxbu"
                >
                  <input
                    aria-valuemax="24"
                    aria-valuemin="0"
                    aria-valuenow="4"
                    class="StyledRangeInput-sc-15st9ck-0 exNhrv"
                    id="rounding"
                    max="24"
                    min="0"
                    name="rounding"
                    step="2"
                    style="text-align: end;"
                    type="range"
                    value="4"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 fSrLNu"
                  >
                    <div
                      class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 lSnvO"
                    >
                      <input
                        autocomplete="off"
                        class="StyledMaskedInput-sc-99vkfa-0 gLmScQ"
                        placeholder=""
                        style="text-align: right; width: 48px;"
                        value="4"
                      />
                    </div>
                    <span
                      class="StyledText-sc-1sadyjn-0 lhOBjf"
                    >
                      px
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bxDDRl"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 ldeBwz"
            >
              <label
                class="StyledBox-sc-13pk1d4-0 fnXGJe"
                for="spacing"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 lhOBjf"
                >
                  spacing
                </span>
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 kqmDKi"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dbdxbu"
                >
                  <input
                    aria-valuemax="36"
                    aria-valuemin="12"
                    aria-valuenow="24"
                    class="StyledRangeInput-sc-15st9ck-0 exNhrv"
                    id="spacing"
                    max="36"
                    min="12"
                    name="spacing"
                    step="4"
                    style="text-align: end;"
                    type="range"
                    value="24"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 fSrLNu"
                  >
                    <div
                      class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 lSnvO"
                    >
                      <input
                        autocomplete="off"
                        class="StyledMaskedInput-sc-99vkfa-0 gLmScQ"
                        placeholder=""
                        style="text-align: right; width: 48px;"
                        value="24"
                      />
                    </div>
                    <span
                      class="StyledText-sc-1sadyjn-0 lhOBjf"
                    >
                      px
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bxDDRl"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 ldeBwz"
            >
              <label
                class="StyledBox-sc-13pk1d4-0 fnXGJe"
                for="scale"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 lhOBjf"
                >
                  font scale
                </span>
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 kqmDKi"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dbdxbu"
                >
                  <input
                    aria-valuemax="4"
                    aria-valuemin="0.2"
                    aria-valuenow="1"
                    class="StyledRangeInput-sc-15st9ck-0 exNhrv"
                    id="scale"
                    max="4"
                    min="0.2"
                    name="scale"
                    step="0.1"
                    style="text-align: end;"
                    type="range"
                    value="1"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 fSrLNu"
                  >
                    <div
                      class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 lSnvO"
                    >
                      <input
                        autocomplete="off"
                        class="StyledMaskedInput-sc-99vkfa-0 gLmScQ"
                        placeholder=""
                        style="text-align: right; width: 48px;"
                        value="1"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="StyledButton-sc-323bzc-0 kIqGcK"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 kLjnaH"
            >
              <span
                class="StyledText-sc-1sadyjn-0 lhOBjf"
              >
                fonts
              </span>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
              />
              <svg
                aria-label="FormNext"
                class="StyledIcon-sc-ofa7kd-0 eJclys"
                viewBox="0 0 24 24"
              >
                <path
                  d="m9 6 6 6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
          <button
            class="StyledButton-sc-323bzc-0 kIqGcK"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 kLjnaH"
            >
              <span
                class="StyledText-sc-1sadyjn-0 lhOBjf"
              >
                colors
              </span>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
              />
              <svg
                aria-label="FormNext"
                class="StyledIcon-sc-ofa7kd-0 eJclys"
                viewBox="0 0 24 24"
              >
                <path
                  d="m9 6 6 6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
          <button
            class="StyledButton-sc-323bzc-0 kIqGcK"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 kLjnaH"
            >
              <span
                class="StyledText-sc-1sadyjn-0 lhOBjf"
              >
                form field
              </span>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
              />
              <svg
                aria-label="FormNext"
                class="StyledIcon-sc-ofa7kd-0 eJclys"
                viewBox="0 0 24 24"
              >
                <path
                  d="m9 6 6 6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 daqJAp"
        />
        <footer
          class="StyledBox-sc-13pk1d4-0 kqfoRe"
        >
          <button
            class="StyledButton-sc-323bzc-0 glFGDs"
            type="button"
          >
            delete theme
          </button>
        </footer>
      </div>
    </div>
    <div
      class="StyledGrommet-sc-19lkkz7-0 CoWIu"
    >
      <main
        class="StyledBox-sc-13pk1d4-0 drjYcJ"
      >
        <div
          class="StyledGrid-sc-1wofa1l-0 hbtXHY"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eNjOry"
          >
            <header
              class="StyledBox-sc-13pk1d4-0 bffQLL"
            >
              <a
                class="StyledButton-sc-323bzc-0 miNor"
                href="/"
              >
                <svg
                  aria-label="HomeRounded"
                  class="StyledIcon-sc-ofa7kd-0 ejqDKc"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M1 22V9.76a2 2 0 0 1 .851-1.636l9.575-6.72a1 1 0 0 1 1.149 0l9.574 6.72A2 2 0 0 1 23 9.76V22a1 1 0 0 1-1 1h-5.333a1 1 0 0 1-1-1v-5.674a1 1 0 0 0-1-1H9.333a1 1 0 0 0-1 1V22a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1z"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </a>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 byKVaK"
              >
                <a
                  class="StyledButton-sc-323bzc-0 miNor"
                  href="/form"
                >
                  <svg
                    aria-label="Add"
                    class="StyledIcon-sc-ofa7kd-0 ejqDKc"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 22V2M2 12h20"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </a>
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  aria-label="Open Menu"
                  class="StyledButton-sc-323bzc-0 cwRBUN"
                  type="button"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ftCvDe"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 lhOBjf"
                    />
                    <svg
                      aria-label="User"
                      class="StyledIcon-sc-ofa7kd-0 ejqDKc"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8 24v-5m8 5v-5M3 24v-5c0-4.97 4.03-8 9-8s9 3.03 9 8v5m-9-13a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </header>
            <div
              class="StyledGrid-sc-1wofa1l-0 cHFsdB"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 gNKrEe"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 jSJzu"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 kPEiDM"
                  >
                    Clients
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 egKnRg"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dmPzVd"
                  >
                    27
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 eqtHZN"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 109.2,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 hIbZLN"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dEPNTI"
                  >
                    added 2 today
                  </span>
                </footer>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 gNKrEe"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 jSJzu"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 kPEiDM"
                  >
                    Sites
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 egKnRg"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dmPzVd"
                  >
                    2
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 eqtHZN"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 84,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 hIbZLN"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dEPNTI"
                  >
                    all good
                  </span>
                </footer>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 gNKrEe"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 jSJzu"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 kPEiDM"
                  >
                    Events
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 egKnRg"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dmPzVd"
                  >
                    270
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 eqtHZN"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 109.2,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 hIbZLN"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dEPNTI"
                  >
                    client A joined 5m ago
                  </span>
                </footer>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 erohNK"
            >
              <header
                class="StyledBox-sc-13pk1d4-0 jSJzu"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 kPEiDM"
                >
                  Latency 
                  <span
                    class="StyledText-sc-1sadyjn-0 dEPNTI"
                  >
                    ms
                  </span>
                </h3>
              </header>
              <div
                class="StyledBox-sc-13pk1d4-0 MXJld"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fYclLf"
                >
                  <div
                    class="StyledStack-sc-ajspsk-0 bkMvqh"
                  >
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#6600cc"
                          opacity="0.4"
                          stroke="#6600cc"
                          stroke-linecap="butt"
                          stroke-linejoin="miter"
                          stroke-width="6"
                        >
                          <g>
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="none"
                          stroke="#6600cc"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="6"
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#333333"
                          opacity="0.4"
                          stroke="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <g
                            stroke="none"
                          >
                            <title />
                            <circle
                              cx="0"
                              cy="0"
                              r="6"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 gLEcPM"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 iZLoYI"
                      >
                        <span
                          class="StyledText-sc-1sadyjn-0 gUXtfk"
                        >
                          2000
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 gUXtfk"
                        >
                          1000
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 gUXtfk"
                        >
                          0
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                  />
                  <div
                    class="StyledStack-sc-ajspsk-0 bkMvqh"
                  >
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#FFAA15"
                          opacity="0.4"
                          stroke="#FFAA15"
                          stroke-linecap="butt"
                          stroke-linejoin="miter"
                          stroke-width="6"
                        >
                          <g>
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="none"
                          stroke="#FFAA15"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="6"
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#333333"
                          opacity="0.4"
                          stroke="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <g
                            stroke="none"
                          >
                            <title />
                            <circle
                              cx="0"
                              cy="0"
                              r="6"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 gLEcPM"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 dvCYcb"
                      >
                        <span
                          class="StyledText-sc-1sadyjn-0 gUXtfk"
                        >
                          0
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 gUXtfk"
                        >
                          1000
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 bklOiq"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 gUXtfk"
                    >
                      -24h
                    </span>
                    <span
                      class="StyledText-sc-1sadyjn-0 gUXtfk"
                    >
                      -12h
                    </span>
                    <span
                      class="StyledText-sc-1sadyjn-0 gUXtfk"
                    >
                      now
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 wfgeN"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dGYhTK"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 fmwNbY"
                    />
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cirHhL"
                    />
                    <span
                      class="StyledText-sc-1sadyjn-0 gUXtfk"
                    >
                      inbound
                    </span>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 dGYhTK"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 hiOZGu"
                    />
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cirHhL"
                    />
                    <span
                      class="StyledText-sc-1sadyjn-0 gUXtfk"
                    >
                      outbound
                    </span>
                  </div>
                </div>
              </div>
              <footer
                class="StyledBox-sc-13pk1d4-0 hIbZLN"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 dEPNTI"
                >
                  peak of 2000ms 15 hours ago
                </span>
              </footer>
            </div>
            <nav
              class="StyledBox-sc-13pk1d4-0 izIZof"
            >
              <a
                class="StyledAnchor-sc-1rp7lwl-0 jicWkQ"
                href="/accessibility"
              >
                accessibility
              </a>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
              />
              <a
                class="StyledAnchor-sc-1rp7lwl-0 jicWkQ"
                href="/typography"
              >
                typography
              </a>
            </nav>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`App empty 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 blpZzJ"
>
  <div
    class="StyledGrid-sc-1wofa1l-0 kToKIo"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gVMnUQ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hevOYs"
      >
        <button
          aria-label="return to my theme"
          class="StyledButton-sc-323bzc-0 gPnbVE"
          type="button"
        >
          <svg
            aria-label="Menu"
            class="StyledIcon-sc-ofa7kd-0 eJclys"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 19h20M2 5h20M2 12h20"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 byKVaK"
        >
          <button
            aria-label="undo last change"
            class="StyledButton-sc-323bzc-0 gPnbVE"
            type="button"
          >
            <svg
              aria-label="Undo"
              class="StyledIcon-sc-ofa7kd-0 eJclys"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.18 4 8.6 5.44 6.06 8h9.71a6 6 0 0 1 0 12h-2v-2h2a4 4 0 0 0 0-8H6.06l2.54 2.51-1.42 1.41L2.23 9z"
              />
            </svg>
          </button>
          <button
            aria-label="redo last change"
            class="StyledButton-sc-323bzc-0 gPnbVE"
            type="button"
          >
            <svg
              aria-label="Redo"
              class="StyledIcon-sc-ofa7kd-0 eJclys"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.82 4 15.4 5.44 17.94 8H8.23a6 6 0 0 0 0 12h2v-2h-2a4 4 0 0 1 0-8h9.71l-2.54 2.51 1.41 1.41L21.77 9z"
              />
            </svg>
          </button>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
        />
        <button
          aria-label="change theme mode to dark"
          class="StyledButton-sc-323bzc-0 gPnbVE"
          type="button"
        >
          <svg
            aria-label="Sun"
            class="StyledIcon-sc-ofa7kd-0 eJclys"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4V2m0 20v-2m8-8h2M2 12h2m13.657-5.657L19.07 4.93M4.93 19.07l1.414-1.414m0-11.314L4.93 4.93m14.14 14.14-1.414-1.414M12 17a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"
              stroke="#000"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
        />
        <button
          aria-label="edit raw JSON"
          class="StyledButton-sc-323bzc-0 dOEgHg"
          type="button"
        >
          <svg
            aria-label="Code"
            class="StyledIcon-sc-ofa7kd-0 eJclys"
            viewBox="0 0 24 24"
          >
            <path
              d="m9 22 6-20m2 15 5-5-5-5M7 17l-5-5 5-5"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 EuOQj"
        />
        <button
          aria-label="share"
          class="StyledButton-sc-323bzc-0 dOEgHg"
          type="button"
        >
          <svg
            aria-label="Share"
            class="StyledIcon-sc-ofa7kd-0 eJclys"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13v10H1V5h10m3-4h9v9m-13 4L23 1 10 14z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 kqmDKi"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 bevWPK"
        >
          <h2
            class="StyledHeading-sc-1rdh4aw-0 idXjQT"
          >
            themes
          </h2>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 XPTFs"
          />
          <button
            aria-label="create a new theme"
            class="StyledButton-sc-323bzc-0 dOEgHg"
            type="button"
          >
            <svg
              aria-label="Add"
              class="StyledIcon-sc-ofa7kd-0 eJclys"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22V2M2 12h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </header>
      </div>
    </div>
    <div
      class="StyledGrommet-sc-19lkkz7-0 CoWIu"
    >
      <main
        class="StyledBox-sc-13pk1d4-0 drjYcJ"
      >
        <div
          class="StyledGrid-sc-1wofa1l-0 hbtXHY"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eNjOry"
          >
            <header
              class="StyledBox-sc-13pk1d4-0 bffQLL"
            >
              <a
                class="StyledButton-sc-323bzc-0 miNor"
                href="/"
              >
                <svg
                  aria-label="HomeRounded"
                  class="StyledIcon-sc-ofa7kd-0 ejqDKc"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M1 22V9.76a2 2 0 0 1 .851-1.636l9.575-6.72a1 1 0 0 1 1.149 0l9.574 6.72A2 2 0 0 1 23 9.76V22a1 1 0 0 1-1 1h-5.333a1 1 0 0 1-1-1v-5.674a1 1 0 0 0-1-1H9.333a1 1 0 0 0-1 1V22a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1z"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </a>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 byKVaK"
              >
                <a
                  class="StyledButton-sc-323bzc-0 miNor"
                  href="/form"
                >
                  <svg
                    aria-label="Add"
                    class="StyledIcon-sc-ofa7kd-0 ejqDKc"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 22V2M2 12h20"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </a>
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  aria-label="Open Menu"
                  class="StyledButton-sc-323bzc-0 cwRBUN"
                  type="button"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ftCvDe"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 lhOBjf"
                    />
                    <svg
                      aria-label="User"
                      class="StyledIcon-sc-ofa7kd-0 ejqDKc"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8 24v-5m8 5v-5M3 24v-5c0-4.97 4.03-8 9-8s9 3.03 9 8v5m-9-13a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </header>
            <div
              class="StyledGrid-sc-1wofa1l-0 cHFsdB"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 gNKrEe"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 jSJzu"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 kPEiDM"
                  >
                    Clients
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 egKnRg"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dmPzVd"
                  >
                    27
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 eqtHZN"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 109.2,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 hIbZLN"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dEPNTI"
                  >
                    added 2 today
                  </span>
                </footer>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 gNKrEe"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 jSJzu"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 kPEiDM"
                  >
                    Sites
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 egKnRg"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dmPzVd"
                  >
                    2
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 eqtHZN"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 84,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 hIbZLN"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dEPNTI"
                  >
                    all good
                  </span>
                </footer>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 gNKrEe"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 jSJzu"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 kPEiDM"
                  >
                    Events
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 egKnRg"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dmPzVd"
                  >
                    270
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 eqtHZN"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 109.2,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 hIbZLN"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 dEPNTI"
                  >
                    client A joined 5m ago
                  </span>
                </footer>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 erohNK"
            >
              <header
                class="StyledBox-sc-13pk1d4-0 jSJzu"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 kPEiDM"
                >
                  Latency 
                  <span
                    class="StyledText-sc-1sadyjn-0 dEPNTI"
                  >
                    ms
                  </span>
                </h3>
              </header>
              <div
                class="StyledBox-sc-13pk1d4-0 MXJld"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fYclLf"
                >
                  <div
                    class="StyledStack-sc-ajspsk-0 bkMvqh"
                  >
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#6600cc"
                          opacity="0.4"
                          stroke="#6600cc"
                          stroke-linecap="butt"
                          stroke-linejoin="miter"
                          stroke-width="6"
                        >
                          <g>
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="none"
                          stroke="#6600cc"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="6"
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#333333"
                          opacity="0.4"
                          stroke="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <g
                            stroke="none"
                          >
                            <title />
                            <circle
                              cx="0"
                              cy="0"
                              r="6"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 gLEcPM"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 iZLoYI"
                      >
                        <span
                          class="StyledText-sc-1sadyjn-0 gUXtfk"
                        >
                          2000
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 gUXtfk"
                        >
                          1000
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 gUXtfk"
                        >
                          0
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                  />
                  <div
                    class="StyledStack-sc-ajspsk-0 bkMvqh"
                  >
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#FFAA15"
                          opacity="0.4"
                          stroke="#FFAA15"
                          stroke-linecap="butt"
                          stroke-linejoin="miter"
                          stroke-width="6"
                        >
                          <g>
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="none"
                          stroke="#FFAA15"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="6"
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 kukkTH"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 jXZIkk"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#333333"
                          opacity="0.4"
                          stroke="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <g
                            stroke="none"
                          >
                            <title />
                            <circle
                              cx="0"
                              cy="0"
                              r="6"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 gLEcPM"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 dvCYcb"
                      >
                        <span
                          class="StyledText-sc-1sadyjn-0 gUXtfk"
                        >
                          0
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 gUXtfk"
                        >
                          1000
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 bklOiq"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 gUXtfk"
                    >
                      -24h
                    </span>
                    <span
                      class="StyledText-sc-1sadyjn-0 gUXtfk"
                    >
                      -12h
                    </span>
                    <span
                      class="StyledText-sc-1sadyjn-0 gUXtfk"
                    >
                      now
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jerLXD"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 wfgeN"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dGYhTK"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 fmwNbY"
                    />
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cirHhL"
                    />
                    <span
                      class="StyledText-sc-1sadyjn-0 gUXtfk"
                    >
                      inbound
                    </span>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 dGYhTK"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 hiOZGu"
                    />
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cirHhL"
                    />
                    <span
                      class="StyledText-sc-1sadyjn-0 gUXtfk"
                    >
                      outbound
                    </span>
                  </div>
                </div>
              </div>
              <footer
                class="StyledBox-sc-13pk1d4-0 hIbZLN"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 dEPNTI"
                >
                  peak of 2000ms 15 hours ago
                </span>
              </footer>
            </div>
            <nav
              class="StyledBox-sc-13pk1d4-0 izIZof"
            >
              <a
                class="StyledAnchor-sc-1rp7lwl-0 jicWkQ"
                href="/accessibility"
              >
                accessibility
              </a>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
              />
              <a
                class="StyledAnchor-sc-1rp7lwl-0 jicWkQ"
                href="/typography"
              >
                typography
              </a>
            </nav>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
